2009-01-13; Alessandro Zummo <a.zummo@towertech.it>

	* src/rig-gui-lcd.c:
	Do not clear frequency if user hits return and
	the new freq has not been entered.

2009-01-13; Alessandro Zummo <a.zummo@towertech.it>

	* src/grig-debug.c:
	Fixed debug levels

2008-12-15; Stephane Fillod <fillods@users.sf.net>

	* src/grig-menubar.[ch]:
	* src/rig-gui-func.[ch]:
	* src/Makefile.am:
	* src/rig-daemon-check.c:
	* src/rig-daemon.[ch]:
	* src/rig-data.[ch]:
	* po/POTFILES.in:
	Special Function window.

	* src/grig-menubar.c:
	* src/rig-gui-ctrl2.c:
	* src/rig-gui-message-window.c:
	* src/rig-gui-smeter.c:
	Allow l10n of menu items.

	* configure.ac:
	* po/fr.po:
	Translation to French.


2008-11-03; Alexandru Csete <oz9aec@gmail.com>

    * configure.ac:
    Updated Gtk+ and Hamlib requirements.


2007-04-14; Alexandru Csete <oz9aec@gmail.com>

    * src/rig-gui-keypad.[ch]:
    * src/rig-gui-lcd.[ch]:
    * src/rig-gui.c:
    * src/rig-gui-smeter.c:
    * src/rig-gui-vfo.c:
    * src/Makefile.am:
    Keypad support from Alessandro Zummo.


2007-01-02; Alexandru Csete <oz9aec@gmail.com>

    * src/radio-conf.[ch]:
    Added data field for config version.


2007-12-31; Alexandru Csete <oz9aec@gmail.com>

    * src/rig-selector.[ch]:
    Added widget showing a list of selected radios. Some basic functionality
    but far from finished.
    

2007-12-29; Alexandru Csete <oz9aec@gmail.com>

    * src/compat.[ch]:
    Added function to retrieve user config directory.
    
    * src/radio-conf.[ch]:
    Added files containing functions for reading and writing .radio files.


2007-11-16;	Alexandru Csete <oz9aec@gmail.com>

	* src/key-press-handler.[ch]:
	Added functions to snoop and manage key press events.

	* src/main.c:
	Use new key press event handler.

	* src/rig-gui-lcd.[ch]:
	Changed rig_gui_lcd_set_freq_digits and rig_gui_lcd_set_rit_digits
	to be public in order to allow direct setting of frequency display
	when managing events other than the ones occuring on the LCD area.